--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Places de cinéma</title>
+    <script src="js/projet.js"></script>
+</head>
+<body>
+    <button onclick="projet()">projet</button>
+</body>
+</html>
