--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <button onclick="projet()">projet</button>
+    <button onclick="dune()">boutton film dune</button>
 </body>
 </html>
