--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <script src="js/projet.js"></script>
 </head>
 <body>
-    <button onclick="projet()">projet</button>
-    <button onclick="dune()">boutton film dune</button>
+
+    <h3>Nos films:</h3>
+    <button onclick="dune()">dune</button><br><br>
+    <button onclick="dune()">007</button><br><br>
+    <button onclick="dune()">toto</button><br><br>
+    <button onclick="dune()">tata</button><br><br>
+
+
+    <button onclick="projet()">Je prends ma place</button><br><br>
+
 </body>
 </html>
