--- a/index.html
+++ b/index.html
@@ -2,27 +2,6 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Places de cinéma</title>
-    <script src="js/projet.js"></script>
-</head>
-<body>
-
-    <h3>Nos films:</h3>
-    <button onclick="dune()">dune</button><br><br>
-    <button onclick="dune()">007</button><br><br>
-    <button onclick="dune()">toto</button><br><br>
-    <button onclick="dune()">tata</button><br><br>
-
-
-    <button onclick="projet()">Je prends ma place</button><br><br>
-
-</body>
-</html>
-/*
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
     <title>Movie project</title>
     <link rel="stylesheet" href="css/projet.css">
     <script src="js/projet.js"></script>
@@ -30,27 +9,38 @@
 <body>
     <h1>Movie project</h1>
 
-    <div class="container m-t-20">
+    <div class="blockFilm">
 
-        <div class="block">
-
-            <img id="dune" src="./img/dune.jpg" alt="dune" onclick="choixFilm()" width="310">
-
-            <div class="content">
-
-                <div class="description">
-                    <p>
-                        L'histoire de Paul Atreides, jeune homme aussi doué que brillant, voué à connaître un destin hors du commun qui le dépasse totalement. Car s'il veut préserver l'avenir de sa famille et de son peuple, il devra se rendre sur la planète la plus dangereuse de l'univers – la seule à même de fournir la ressource la plus précieuse au monde, capable de décupler la puissance de l'humanité. Tandis que des forces maléfiques se disputent le contrôle de cette planète, seuls ceux qui parviennent à dominer leur peur pourront survivre…
-
-                    </p>
-                    <span class="nombrePlace" onclick="nombrePlace()">
-                        Nombre de place!
-                    </span>
-                </div>
-
-            </div>
-
+        <div class="image1">
+            <img id="dune" src="./img/dune.jpg" alt="dune" onclick="choixFilm()">
         </div>
+
+        <div class="image2">
+            <img id="007" src="./img/007.jpg" alt="007" onclick="choixFilm()">
+        </div>
+
+        <div class="image3">
+            <img id="shang-chi" src="./img/shang-chi.jpg" alt="shang-chi" onclick="choixFilm()">
+        </div>
+
+        <div class="image4">
+            <img id="eva" src="./img/eva.jpg" alt="eva" onclick="choixFilm()">
+        </div>
+
+        <div class="image5">
+            <img id="iWantYou" src="./img/want.jpg" alt="i want you" onclick="choixFilm()">
+        </div>
+
+        <div class="image6">
+            <img id="everyday" src="./img/everyday.jpg" alt="everyday" onclick="choixFilm()">
+        </div>
+
+    </div>
+
+    <span class="nombrePlace" onclick="nombrePlace()">Nombre de place!</span>
+    <div class="space"></div>
+</body>
+</html>
 <!--
         <div class="image2">
             <img id="007" src="./img/007.jpg" alt="007" onclick="choixFilm()">
